fix for button text linebreaks in FF

--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -48,7 +48,7 @@ script.podlove-subscribe-button {
     position: relative;
     text-align: center;
     top: -4px;
-    width: 59px;
+    width: 50px;
   }
 }
 
@@ -70,6 +70,17 @@ script.podlove-subscribe-button {
   font-size: 10px;
   height: 18px;
   width: 75px;
+
+  &:before {
+    left: -3px;
+    position: relative;
+    top: -1px;
+  }
+
+  span {
+    left: -4px;
+    margin-left: 3px;
+  }
 }
 
 
@@ -103,7 +114,8 @@ script.podlove-subscribe-button {
 
   span {
     top: -4px;
-    width: 70px;
+    margin-left: 4px;
+    width: 60px;
   }
 }
 
@@ -128,7 +140,7 @@ script.podlove-subscribe-button {
 
   span {
     top: -6px;
-    width: 112px;
+    width: 107px;
   }
 }
 
